--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ dependencies = [
   'importlib-metadata; python_version < "3.8"',
   'importlib-resources; python_version < "3.9"',
   "polars<1.4",
+  "python-dateutil<3",
   "python-dotenv<2",
   "python-slugify<9",
   "pyyaml<7",
